# rixvox

./: .gitignore  README.md  debug_align.py  mp3_to_wav.sh  normalize_map_text.py  pyproject.toml  requirements.txt
scripts/: align_transcript.py  align_transcript_pytorch.py  alignment_probs_writer.py  create_chunks.py  create_hf_dataset.py  date_based_join.R  diarization_matcher.py  diarization_preprocess.py  diarization_pyannote.py  fuzzy_matcher.py  json_to_parquet.py  lang_detect_whisper.py  riksdagen_corpus.py  transcribe_wav2vec2.py  transcribe_whisper.py  transcriptions_to_df.py  vad_pyannote.py
scripts/distributed/: transcribe_whisper_ddp.py
scripts/parlaspeech/: parlaclarin_align.py
scripts/riksdag_web/: dataset_to_json.py  download_audio_metadata.py  fuzzy_matcher.py  preprocess_speech_metadata.py
scripts/riksdagen_old/: dataset_to_json.py  diarization_matcher.py  fuzzy_matcher.py
scripts/riksdagen_web/: dataset_to_json.py  diarization_matcher.py  download_audio.py  fuzzy_matcher.py  json_to_paquet.py  json_to_parquet.py
scripts/stats/: speech_match_statistics.py
scripts/utils/: download_modern_speeches.sh  launch_inference.sh  mp4_to_mp3.py
src/rixalign/: asr.py  audio.py  dataset.py  speech_finder.py  text.py  vad.py
src/rixalign/ctc_segmentation/: align.py
src/rixalign/parlaspeech/: matching.py  normalization.py  strings_sv.py
src/rixvox/: alignment.py  api.py  dataset.py  detect_language.py  json.py  make_chunks.py  metrics.py  speech_finder.py  text.py
src/rixvox/ctc_segmentation/: __init__.py  align.py  alignment.py
(+4 files in other folders)
