[build-system]
requires = ["setuptools>=67.0.0"]
build-backend = "setuptools.build_meta"

[project]
version = "0.0.2"
name = "rixvox"

requires-python = ">= 3.9"

dependencies = [
  "transformers<=4.36.1",
  "datasets>=2.18.0",
  "torch>=2.1.2",
  "accelerate>=0.25.0",
  "tqdm>=4.66.1",
  "ctc-segmentation>=1.7.4",
  "soundfile>=0.12.1",
]

readme = "README.md"

[project.urls]
Homepage = "https://github.com/kb-labb/rixvox"
Issues = "https://github.com/kb-labb/rixvox/issues"

[tool.isort]
profile = "black"

[tool.black]
line-length = 99